cambie el fondo en otro lado

--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
 html,
 
 body {
-  background:url(../www/img/fondo.jpg);
+  background:url("/img/fondo.jpg");
   background-position: center;
   background-repeat: no repeat;
   background-attachment: fixed;
